--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
         <artifactId>editor-schema</artifactId>
         <version>1.0-SNAPSHOT</version>
     </dependency>
+        <dependency>
+            <groupId>es.e-ucm.ead</groupId>
+            <artifactId>importer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     <dependency>
         <groupId>com.badlogicgames.gdx</groupId>
         <artifactId>gdx-backend-lwjgl</artifactId>
@@ -96,12 +101,17 @@
         <version>1.0-SNAPSHOT</version>
         <classifier>natives-desktop</classifier>
     </dependency>
-    <dependency>
-        <groupId>org.imgscalr</groupId>
-        <artifactId>imgscalr-lib</artifactId>
-        <version>4.2</version>
-        <type>jar</type>
-        <scope>compile</scope>
-    </dependency>
+        <dependency>
+            <groupId>es.eucm.eadventure</groupId>
+            <artifactId>eadventure-loader</artifactId>
+            <version>1.5</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/eadventure-loader.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.im4java</groupId>
+            <artifactId>im4java</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
 </project>
